--- a/package.json
+++ b/package.json
@@ -2,30 +2,31 @@
   "name": "shina-game",
   "version": "1.0.0",
   "description": "Игра 'Карта Шины' - симуляция движения персонажа по городу",
-  "main": "api/index.js",
+  "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'No build step needed for static files'",
-    "start": "node api/index.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5"
+    "start": "python3 -m http.server 8000",
+    "dev": "python3 -m http.server 8000",
+    "test": "node test-simple.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "collect": "node scripts/collect/quick-collect.cjs",
+    "collect-full": "node scripts/collect/collect-files.cjs",
+    "manage": "node scripts/collect/manage.cjs"
   },
   "devDependencies": {
-    "vercel": "^32.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "jest": "^30.1.3",
+    "playwright": "^1.55.0"
   },
   "keywords": [
     "game",
     "simulation",
     "pixi.js",
-    "websocket",
-    "multiplayer"
+    "javascript",
+    "html5"
   ],
   "author": "Kirill",
-  "license": "MIT"
+  "license": "MIT",
+  "directories": {
+    "doc": "docs"
+  }
 }
